--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img src="images/student.webp" class="card-img-top" alt="Project 3" style="height: 262px">
                     <div class="card-body">
                         <h5 class="card-title">Project 3</h5>
-                        <p class="card-text">Student Management Sysstem.</p>
+                        <p class="card-text">Student Management System.</p>
                         <a href="./student.html" class="btn btn-primary">View Project</a>
                     </div>
                 </div>
